--- a/index.html
+++ b/index.html
@@ -6,13 +6,89 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>CSS Grid Demo</title>
-   
+    <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <script src="script.js"></script>
 </head>
 
-<body>
-   
+<body onload="loadFirstImage();">
+    <header>
+        <img src="images/logo.webp" />
 
-    <p>some text</p>
+        <nav>
+            <ul>
+                <li><a href="index.html">la société</a></li>
+                <li><a href="cars.html">les véhicules</a></li>
+                <li><a href="#">le tarif</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <!-- Slideshow container -->
+    <div class="slideshow-container">
+
+        <!-- Full-width images with number and caption text -->
+        <div class="mySlides fade">
+            <!-- <div class="numbertext">1 / 3</div> -->
+            <img src="images/bentley.webp">
+            <!-- <div class="text">Caption Text</div> -->
+        </div>
+
+        <div class="mySlides fade">
+            <!-- <div class="numbertext">2 / 3</div> -->
+            <img src="images/audi.webp">
+            <!-- <div class="text">Caption Two</div> -->
+        </div>
+
+        <div class="mySlides fade">
+            <!-- <div class="numbertext">3 / 3</div> -->
+            <img src="images/lambo.webp">
+            <!-- <div class="text">Caption Three</div> -->
+        </div>
+
+        <!-- Next and previous buttons -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+    <br>
+
+    <!-- The dots/circles -->
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+    </div>
+
+    <section id="info">
+        <h1>Prestige Pragues</h1>
+        <p> partenaire en location de voitures de luxe. Spéecialisée dans la location de voitures de prestige, Prestige
+            Pragues met a votre disposition des voitures de sport et de luxe. Que ce soit pour un simple trajet, un
+            mariage, transfert, anniversaire ou pour le plaisir de conduire un veéhicule de sport, notre éequipe forte
+            de son expeérience, met tout en oeuvre pour vous proposer les meilleures prestations.</p>
+        <p>Contactez-nous pour toute réeservation ou demande de renseignements</p>
+        <hr />
+
+
+
+
+    </section>
+
+    <footer>
+        <p>suivez-nous !</p>
+        <ul>
+            <li><a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+            <li><a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+            <li><a href="#" target="_blank"><i class="fa fa-snapchat-square"></i></a></li>
+            <li><a href="#" target="_blank"><i class="fa fa-pinterest-square"></i></a></li>
+            <li><a href="#" target="_blank"><i class="fa fa-github-square"></i></a></li>
+        </ul>
+
+        <p>&copy;
+            <script>document.write(new Date().getFullYear())</script> prestige prague
+        </p>
+    </footer>
+
 </body>
-
-</html>
