--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>CSS Grid Demo</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Prestige Prague</title>
 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="slideshow.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <script src="script.js"></script>
 </head>
 
 <body onload="loadFirstImage();">
     <header>
-        <img src="images/logo.webp" />
+        <img src="images/logo2.png" />
 
         <nav>
             <ul>
@@ -77,6 +78,14 @@
     </section>
 
     <footer>
+        <div style="
+            display: grid;
+            ">
+
+        </div>
+
+
+
         <p>suivez-nous !</p>
         <ul>
             <li><a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
