--- a/cars.html
+++ b/cars.html
@@ -8,13 +8,13 @@
     <title>CSS Grid Demo</title>
     <link rel="stylesheet" href="style.css">
 
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.0/css/font-awesome.min.css">
     <script src="script.js"></script>
 </head>
 
 <body>
     <header>
-        <img src="images/logo.webp" />
+        <img src="images/logo2.png" />
 
         <nav>
             <ul>
@@ -26,7 +26,19 @@
         </nav>
     </header>
 
-    <p>some text</p>
+    <section>
+        <div>
+            <div>
+                    
+            </div>
+        </div>
+        <div>
+            adfasf
+        </div>
+    </section>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
