--- a/index.html
+++ b/index.html
@@ -78,26 +78,41 @@
     </section>
 
     <footer>
-        <div style="
-            display: grid;
-            ">
-
+        <div class="flex-container">
+            <div class="flex-item">
+                horaires <br>
+                d'ouverture<br>
+                du lundi au samedi<br>
+                de 9h à 19h<br>
+            </div>
+            <div class="flex-item">
+                address <br>
+                ???
+            </div>
+            <div class="flex-item">
+                contact <br>
+                tel:<br>
+                mail:
+            </div>
         </div>
 
 
 
-        <p>suivez-nous !</p>
-        <ul>
-            <li><a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa fa-snapchat-square"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa fa-pinterest-square"></i></a></li>
-            <li><a href="#" target="_blank"><i class="fa fa-github-square"></i></a></li>
-        </ul>
+        <div>
 
-        <p>&copy;
-            <script>document.write(new Date().getFullYear())</script> prestige prague
-        </p>
+            <p>suivez-nous !</p>
+            <ul>
+                <li><a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-snapchat-square"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-pinterest-square"></i></a></li>
+                <li><a href="#" target="_blank"><i class="fa fa-github-square"></i></a></li>
+            </ul>
+
+            <p>&copy;
+                <script>document.write(new Date().getFullYear())</script> prestige prague
+            </p>
+        </div>
     </footer>
 
 </body>
