--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/slideshow.css">
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/alex-brush">
+    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/baskerville">
     <script src="script.js"></script>
 </head>
 
-<body onload="loadFirstImage();">
+<body onload="plusSlides(0);">
     <header>
         <img src="images/logo2.png" />
-
+        <p>Prestige Prague</p>
         <nav>
             <ul>
                 <li><a href="index.html">la société</a></li>
                 <li><a href="cars.html">les véhicules</a></li>
                 <li><a href="#">le tarif</a></li>
-                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -34,84 +35,97 @@
         <!-- Full-width images with number and caption text -->
         <div class="mySlides fade">
             <!-- <div class="numbertext">1 / 3</div> -->
-            <img src="images/bentley.webp">
+            <img src="images/bmw.jpg">
             <!-- <div class="text">Caption Text</div> -->
         </div>
 
         <div class="mySlides fade">
             <!-- <div class="numbertext">2 / 3</div> -->
-            <img src="images/audi.webp">
+            <img src="images/ferrari2.png">
             <!-- <div class="text">Caption Two</div> -->
-        </div>
-
-        <div class="mySlides fade">
-            <!-- <div class="numbertext">3 / 3</div> -->
-            <img src="images/lambo.webp">
-            <!-- <div class="text">Caption Three</div> -->
         </div>
 
         <!-- Next and previous buttons -->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
-    <br>
+
 
     <!-- The dots/circles -->
     <div style="text-align:center">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
-        <span class="dot" onclick="currentSlide(3)"></span>
     </div>
 
     <section id="info">
-        <h1>Prestige Pragues</h1>
-        <p> partenaire en location de voitures de luxe. Spéecialisée dans la location de voitures de prestige, Prestige
-            Pragues met a votre disposition des voitures de sport et de luxe. Que ce soit pour un simple trajet, un
-            mariage, transfert, anniversaire ou pour le plaisir de conduire un veéhicule de sport, notre éequipe forte
-            de son expeérience, met tout en oeuvre pour vous proposer les meilleures prestations.</p>
-        <p>Contactez-nous pour toute réeservation ou demande de renseignements</p>
-        <hr />
 
+        <div class="info-title-1">Prestige Pragues</div>
+        <div class="info-title-2">Votre partenaire en location de voitures de luxe.</div>
 
+        <hr style="width: 350px;">
 
-
+        <div class="info-text">
+            Spécialisée dans la location de voitures de prestige, Prestige Pragues met à votre disposition des voitures
+            de sport et
+            de luxe. Que ce soit pour un simple trajet, un mariage, transfert, anniversaire ou pour le plaisir de
+            conduire un véhicule
+            de sport, notre équipe forte de son expérience, met tout en œuvre pour vous proposer les meilleures
+            prestations.
+            <br>
+            <br>
+            Contactez-nous pour toute réeservation ou demande de renseignements
+        </div>
     </section>
 
     <footer>
-        <div class="flex-container">
-            <div class="flex-item">
-                horaires <br>
-                d'ouverture<br>
-                du lundi au samedi<br>
-                de 9h à 19h<br>
+
+        <div class="contact">
+
+            <div class="contact-header">
+                contact
             </div>
-            <div class="flex-item">
-                address <br>
-                ???
+
+            <div class="contact-horaires">
+                <div class="contact-item-1 contact-item-2 contact-item-3 ">
+                    <span style="letter-spacing: 10px;">horaires</span> <br> d'ouverture :
+                </div>
+                <div class="contact-item-1">
+                    Du lundi au samedi
+                    <br>
+                    <span class="contact-item-4">de 9h à 19h</span>
+                </div>
             </div>
-            <div class="flex-item">
-                contact <br>
-                tel:<br>
-                mail:
+
+            <div class="contact-address">
+                <div class="contact-item-1 contact-item-2 contact-item-3">
+                    addresse :<br>
+                    ???
+                </div>
+            </div>
+
+            <div class="contact-contact">
+                <div class="contact-item-1 contact-item-2 contact-item-3">
+                    contact <br><br>
+                    tel:<br>
+                    mail:
+                </div>
+            </div>
+
+            <div class="social-media">
+                suivez-nous !
+                <ul>
+                    <li><a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-snapchat-square"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-pinterest-square"></i></a></li>
+                    <li><a href="#" target="_blank"><i class="fa fa-github-square"></i></a></li>
+                </ul>
             </div>
         </div>
 
-
-
-        <div>
-
-            <p>suivez-nous !</p>
-            <ul>
-                <li><a href="#" target="_blank"><i class="fa fa-twitter-square"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-snapchat-square"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-pinterest-square"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fa fa-github-square"></i></a></li>
-            </ul>
-
-            <p>&copy;
-                <script>document.write(new Date().getFullYear())</script> prestige prague
-            </p>
+        </div >
+        <div class="ip"s>&copy;
+            <script>document.write(new Date().getFullYear())</script> prestige prague
         </div>
     </footer>
 
