--- a/cars.html
+++ b/cars.html
@@ -8,7 +8,7 @@
     <title>Prestige Prague</title>
 
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/slideshow.css">
+    <link rel="stylesheet" href="css/cars.css">
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/alex-brush">
     <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/baskerville">
@@ -28,19 +28,75 @@
         </nav>
     </header>
 
-    <section id="info">
+    <section id="content">
         <div class="car-list">
-            <div class="car-text-1">some text</div>
-            <div class="car-image-1">an image</div>
+            <!-- <ul style="list-style-type: none; padding: 10px; margin: 10px;">
+            <li> -->
+            <div class="car-wrapper">
+                <div class="box car-mark-text">bmw m3</div>
+                <div class="box car-type-text">vehicule de sport</div>
+                <div class="box car-info-text">Un SUV compact qui allie sportivité,
+                    design et praticitée.</div>
+                <div class="box car-price-label">
+                    <div
+                        style="font: bold 14px Arial; background-color: #000; color: #fff; padding: 2px 5px 2px 5px; width: 120px; text-align: center; text-transform: capitalize;">
+                        a partir de :
+                    </div>
+                </div>
+                <div class="box car-price">
+                    <span style="font: bold 24px Arial, Helvetica;">400&euro;</span> euros/jour
+                </div>
+                <div class="box car-image"><img src="images/bmw_small.jpg"></div>
+            </div>
+            <!-- </li>
+            <li> -->
+            <div class="car-wrapper">
+                <div class="box car-mark-text">ferrari</div>
+                <div class="box car-type-text">vehicule de sport</div>
+                <div class="box car-info-text">Un SUV compact qui allie sportivité,
+                    design et praticitée.</div>
+                <div class="box car-price-label">
+                    <div
+                        style="font: bold 14px Arial; background-color: #000; color: #fff; padding: 2px 5px 2px 5px; width: 120px; text-align: center; text-transform: capitalize;">
+                        a partir de :
+                    </div>
+                </div>
+                <div class="box car-price">
+                    <span style="font: bold 24px Arial, Helvetica;">400&euro;</span> euros/jour
+                </div>
+                <div class="box car-image"><img src="images/ferrari_small.png"></div>
+            </div>
+            <!-- </li>
+            <li> -->
+            <div class="car-wrapper">
+                <div class="box car-mark-text">ferrari</div>
+                <div class="box car-type-text">vehicule de sport</div>
+                <div class="box car-info-text">Un SUV compact qui allie sportivité,
+                    design et praticitée.</div>
+                <div class="box car-price-label">
+                    <div
+                        style="font: bold 14px Arial; background-color: #000; color: #fff; padding: 2px 5px 2px 5px; width: 120px; text-align: center; text-transform: capitalize;">
+                        a partir de :
+                    </div>
+                </div>
+                <div class="box car-price">
+                    <span style="font: bold 24px Arial, Helvetica;">400&euro;</span> euros/jour
+                </div>
+                <div class="box car-image"><img src="images/ferrari2_small.png"></div>
+            </div>
+            <!-- </li>
+        </ul> -->
+
         </div>
-        <div class="car-list">
-            <div class="car-text">some text</div>
-            <div class="car-image">an image</div>
-        </div>
-        <div class="car-list">
-            <div class="car-text-1">some text</div>
-            <div class="car-image-1">an image</div>
-        </div>
+
+        <!-- <div class="car-list-wrapper">
+            <div class="box header">Header</div>
+            <div class="box sidebar">Sidebar</div>
+            <div class="box content">Content</div>
+        </div> -->
+
+
+
 
     </section>
 
