--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <span class="dot" onclick="currentSlide(2)"></span>
     </div>
 
-    <section id="info">
+    <section id="presentation">
 
         <div class="info-title-1">Prestige Pragues</div>
         <div class="info-title-2">Votre partenaire en location de voitures de luxe.</div>
