--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">la société</a></li>
-                <li><a href="cars.html">les véhicules</a></li>
+                <li><a href="car-list.html">les véhicules</a></li>
                 <li><a href="#">le tarif</a></li>
             </ul>
         </nav>
@@ -123,8 +123,8 @@
             </div>
         </div>
 
-        </div >
-        <div class="ip"s>&copy;
+        </div>
+        <div class="ip" s>&copy;
             <script>document.write(new Date().getFullYear())</script> prestige prague
         </div>
     </footer>
